--- a/index.html
+++ b/index.html
@@ -12,6 +12,49 @@
     />
   </head>
   <body>
+    <div></div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="container">
+          <ul class="navbar-nav justify-content-center">
+            <a class="navbar-brand" href="#">
+              <img src="./imgs/logo.webp" width="30" height="30" alt="" />
+            </a>
+            <li class="nav-item mx-4 active">
+              <a class="nav-link" href="#"
+                >Home <span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item mx-4">
+              <a class="nav-link" href="#">Partners</a>
+            </li>
+            <li class="nav-item mx-4">
+              <a class="nav-link" href="#">Coupons</a>
+            </li>
+            <li class="nav-item mx-4">
+              <a class="nav-link" href="#">Articles</a>
+            </li>
+            <li class="nav-item mx-4">
+              <a class="nav-link" href="#">About Us</a>
+            </li>
+            <li class="nav-item mx-4">
+              <a class="nav-link" href="#">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
