added partners section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
     <div></div>
@@ -55,6 +56,30 @@
         </div>
       </div>
     </nav>
+    <section class="pt-5">
+      <div class="container text-center">
+        <h2>Partner Companies</h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt
+          ipsum commodi recusandae. Illum rem aperiam iure nihil aliquid!
+          Corporis, iusto.
+        </p>
+        <div class="d-flex justify-content-between flex-wrap">
+          <div class="partners-item p-5">
+            <img src="./imgs/partner_1.png" alt="First Partner" />
+          </div>
+          <div class="partners-item p-5">
+            <img src="./imgs/partner_2.png" alt="Second Partner" />
+          </div>
+          <div class="partners-item p-5">
+            <img src="./imgs/partner_3.png" alt="Third Partner" />
+          </div>
+          <div class="partners-item p-5">
+            <img src="./imgs/partner_4.png" alt="Fourth Partner" />
+          </div>
+        </div>
+      </div>
+    </section>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
