Meaningful alt atribute for coupon images

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="col-12 col-md-6 col-lg-3">
               <div class="coupon-box">
                 <div class="image-holder">
-                  <img src="./imgs/christmas-coupon.jpg" alt="Avatar" />
+                  <img src="./imgs/christmas-coupon.jpg" alt="Coupon" />
                 </div>
                 <div class="text-holder">
                   <h3>
@@ -118,7 +118,7 @@
             <div class="col-12 col-md-6 col-lg-3">
               <div class="coupon-box">
                 <div class="image-holder">
-                  <img src="./imgs/christmas-coupon.jpg" alt="Avatar" />
+                  <img src="./imgs/christmas-coupon.jpg" alt="Coupon" />
                 </div>
                 <div class="text-holder">
                   <h3>
@@ -139,7 +139,7 @@
             <div class="col-12 col-md-6 col-lg-3">
               <div class="coupon-box">
                 <div class="image-holder">
-                  <img src="./imgs/christmas-coupon.jpg" alt="Avatar" />
+                  <img src="./imgs/christmas-coupon.jpg" alt="Coupon" />
                 </div>
                 <div class="text-holder">
                   <h3>
@@ -160,7 +160,7 @@
             <div class="col-12 col-md-6 col-lg-3">
               <div class="coupon-box">
                 <div class="image-holder">
-                  <img src="./imgs/christmas-coupon.jpg" alt="Avatar" />
+                  <img src="./imgs/christmas-coupon.jpg" alt="Coupon" />
                 </div>
                 <div class="text-holder">
                   <h3>
