Final fixes for blog section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <a class="nav-link" href="#coupons">Coupons</a>
             </li>
             <li class="nav-item mx-4">
-              <a class="nav-link" href="#articles">Articles</a>
+              <a class="nav-link" href="#blog">Articles</a>
             </li>
             <li class="nav-item mx-4">
               <a class="nav-link" href="#">About Us</a>
@@ -185,8 +185,11 @@
           </div>
         </div>
       </section>
-      <section id="articles" class="articles-section bg-light">
+      <section id="blog" class="blog-section bg-light">
         <div class="container">
+          <div class="m-5 text-center">
+            <h2 class="blog-heading">Our Blog</h2>
+          </div>
           <div class="row d-flex">
             <div class="col-md-4 d-flex">
               <div class="blog-entry justify-content-end">
