Small fixes for blog section

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
               <a class="nav-link" href="#coupons">Coupons</a>
             </li>
             <li class="nav-item mx-4">
-              <a class="nav-link" href="#blog">Articles</a>
+              <a class="nav-link" href="#blog">Blog</a>
             </li>
             <li class="nav-item mx-4">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="#">Articles</a>
             </li>
             <li class="nav-item mx-4">
               <a class="nav-link" href="#">Contact Us</a>
@@ -109,7 +109,6 @@
                       >Up to 20% off on christmas gifts</a
                     >
                   </h3>
-                  <p>Use Promo Code: <span class="promo">BOH232</span></p>
                   <a href="#" class="btn btn-primary text-uppercase text-center"
                     >See Details</a
                   >
@@ -130,7 +129,6 @@
                       >Up to 20% off on christmas gifts</a
                     >
                   </h3>
-                  <p>Use Promo Code: <span class="promo">BOH232</span></p>
                   <a href="#" class="btn btn-primary text-uppercase text-center"
                     >See Details</a
                   >
@@ -151,7 +149,6 @@
                       >Up to 20% off on christmas gifts</a
                     >
                   </h3>
-                  <p>Use Promo Code: <span class="promo">BOH232</span></p>
                   <a href="#" class="btn btn-primary text-uppercase text-center"
                     >See Details</a
                   >
@@ -172,7 +169,6 @@
                       >Up to 20% off on christmas gifts</a
                     >
                   </h3>
-                  <p>Use Promo Code: <span class="promo">BOH232</span></p>
                   <a href="#" class="btn btn-primary text-uppercase text-center"
                     >See Details</a
                   >
