--- a/index.html
+++ b/index.html
@@ -60,13 +60,16 @@
       </div>
     </nav>
     <main>
-      <section class="pt-5" id="coupons">
+      <section class="p-4" id="coupons">
         <div class="container container-coupons">
+          <div class="m-5 text-center">
+            <h2 class="blog-heading">Coupons</h2>
+          </div>
           <div class="row">
             <div class="col-12 col-md-6 col-lg-3">
               <div class="coupon-box">
                 <div class="image-holder">
-                  <img src="./imgs/christmas-coupon.jpg" alt="Coupon" />
+                  <img src="./imgs/coupon1.png" alt="Coupon" />
                 </div>
                 <div class="text-holder">
                   <h3>
@@ -86,7 +89,7 @@
             <div class="col-12 col-md-6 col-lg-3">
               <div class="coupon-box">
                 <div class="image-holder">
-                  <img src="./imgs/christmas-coupon.jpg" alt="Coupon" />
+                  <img src="./imgs/coupon2.png" alt="Coupon" />
                 </div>
                 <div class="text-holder">
                   <h3>
@@ -106,7 +109,7 @@
             <div class="col-12 col-md-6 col-lg-3">
               <div class="coupon-box">
                 <div class="image-holder">
-                  <img src="./imgs/christmas-coupon.jpg" alt="Coupon" />
+                  <img src="./imgs/coupon3.png" alt="Coupon" />
                 </div>
                 <div class="text-holder">
                   <h3>
@@ -126,7 +129,7 @@
             <div class="col-12 col-md-6 col-lg-3">
               <div class="coupon-box">
                 <div class="image-holder">
-                  <img src="./imgs/christmas-coupon.jpg" alt="Coupon" />
+                  <img src="./imgs/coupon4.png" alt="Coupon" />
                 </div>
                 <div class="text-holder">
                   <h3>
