--- a/index.html
+++ b/index.html
@@ -17,48 +17,50 @@
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <div class="container">
-          <ul class="navbar-nav justify-content-center">
-            <a class="navbar-brand" href="#">
-              <img src="./imgs/logo.webp" width="30" height="30" alt="" />
-            </a>
-            <li class="nav-item mx-4 active">
-              <a class="nav-link" href="#"
-                >Home <span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item mx-4">
-              <a class="nav-link" href="#">Articles</a>
-            </li>
-            <li class="nav-item mx-4">
-              <a class="nav-link" href="#coupons">Coupons</a>
-            </li>
-            <li class="nav-item mx-4">
-              <a class="nav-link" href="#blog">Blog</a>
-            </li>
-            <li class="nav-item mx-4">
-              <a class="nav-link" href="#partners">Partners</a>
-            </li>
-            <li class="nav-item mx-4">
-              <a class="nav-link" href="#">Contact Us</a>
-            </li>
-          </ul>
+    <div class="mt-5 container">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="container">
+            <ul class="navbar-nav justify-content-center">
+              <a class="navbar-brand" href="#">
+                <img src="./imgs/logo.png" width="60" height="60" alt="All in" />
+              </a>
+              <li class="nav-item mx-4">
+                <a class="nav-link" href="#"
+                  >Home <span class="sr-only">(current)</span></a
+                >
+              </li>
+              <li class="nav-item mx-4">
+                <a class="nav-link" href="#">Articles</a>
+              </li>
+              <li class="nav-item mx-4">
+                <a class="nav-link" href="#coupons">Coupons</a>
+              </li>
+              <li class="nav-item mx-4">
+                <a class="nav-link" href="#blog">Blog</a>
+              </li>
+              <li class="nav-item mx-4">
+                <a class="nav-link" href="#partners">Partners</a>
+              </li>
+              <li class="nav-item mx-4">
+                <a class="nav-link" href="#">Contact Us</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </div>
     <main>
       <section class="p-4" id="coupons">
         <div class="container container-coupons">
