--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <a class="nav-link" href="#partners">Partners</a>
               </li>
               <li class="nav-item mx-4">
-                <a class="nav-link" href="#">Contact Us</a>
+                <a class="nav-link" href="#contactUs">Contact Us</a>
               </li>
             </ul>
           </div>
@@ -367,6 +367,70 @@
               </a>
             </div>
           </div>
+        </div>
+      </section>
+      <section id="contactUs" class="bg-light">
+        <div class="py-5 text-center">
+          <h2>Contact Us</h2>
+        </div>
+        <div class="container form-container">
+          <form>
+            <div class="form-row">
+              <div class="form-group col-md-12">
+                <label for="inputEmail4">Email</label>
+                <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-12">
+                <label for="inputEmail4">Your Message</label>
+                <div class="input-group">
+                  <textarea class="form-control" aria-label="With textarea"></textarea>
+                </div>
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-12">
+                <label for="inputAddress">Address</label>
+                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-12">
+                <label for="inputAddress2">Address 2</label>
+                <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-12">
+                <label for="inputCity">City</label>
+                <input type="text" class="form-control" id="inputCity">
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-8">
+                <label for="inputState">State</label>
+                <select id="inputState" class="form-control">
+                  <option>Aragatsotn</option>
+                  <option>Ararat</option>
+                  <option>Armavir</option>
+                  <option>Gegharkunik</option>
+                  <option>Kotayk</option>
+                  <option>Shirak</option>
+                  <option>Syunik</option>
+                  <option>Vayots Dzor</option>
+                  <option selected>Yerevan</option>
+                </select>
+              </div>
+              <div class="form-group col-md-4">
+                <label for="inputZip">Zip</label>
+                <input type="text" class="form-control" id="inputZip">
+              </div>
+            </div>
+            <div class="mt-3 text-center">
+              <button type="submit" class="btn btn-primary">Contact Us</button>
+            </div>
+          </form>
         </div>
       </section>
     </main>
