--- a/index.html
+++ b/index.html
@@ -486,6 +486,38 @@
         </div>
       </section>
     </main>
+    <footer>
+      <div class="footer-top">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <h3>About Us</h3>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur laborum sunt fugiat non! In voluptas minus quisquam facere sunt velit!</p>
+              <p>&copy; All.in LLC</p>
+            </div>
+            <div class="col-md-6">
+              <h3>Contact</h3>
+              <p><i class="fas fa-map-marker-alt"></i> Yerevan, Bagramyan Ave. 17/20</p>
+              <p><i class="fas fa-phone"></i> Phone: (374) 00 00 00</p>
+              <p><i class="fas fa-envelope"></i> Email: <a href="info@allin.com">info@allin.com</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <div class="container">
+          <div class="row">
+            <div class="col footer-social text-center">
+              <a href="#"><i class="fab fa-facebook-f"></i></a> 
+              <a href="#"><i class="fab fa-twitter"></i></a> 
+              <a href="#"><i class="fab fa-google-plus-g"></i></a> 
+              <a href="#"><i class="fab fa-instagram"></i></a> 
+              <a href="#"><i class="fab fa-pinterest"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
