--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
             <div class="col-md-6">
               <h3>About Us</h3>
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur laborum sunt fugiat non! In voluptas minus quisquam facere sunt velit!</p>
-              <p>&copy; All.in LLC</p>
+              <p>&copy; David Gasparyan</p>
             </div>
             <div class="col-md-6">
               <h3>Contact</h3>
