--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
             <div class="col-lg-12 col-xl-6">
               <div class="row">
-                <div class="mdl-tabs__panel panel-single is-active" id="panel1" style="color:blue">
+                <div class="mdl-tabs__panel panel-single is-active" id="panel1">
                   <div class="row">
                     <div class="col-12 spacing">
                       <h3 class="section-title">Lorem ipsum</h3>
@@ -221,11 +221,10 @@
                     </div>
                   </div>
                   <h3 class="heading mb-3">
-                    <a href="#">All you want to know about industrial laws</a>
+                    <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing.</a>
                   </h3>
                   <p>
-                    A small river named Duden flows by their place and supplies
-                    it with the necessary regelialia.
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum nostrum voluptate corporis labore odio tempora doloremque optio soluta veritatis veniam!
                   </p>
                   <p>
                     <a href="#" class="btn-custom"
@@ -250,11 +249,10 @@
                     </div>
                   </div>
                   <h3 class="heading mb-3">
-                    <a href="#">All you want to know about industrial laws</a>
+                    <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing.</a>
                   </h3>
                   <p>
-                    A small river named Duden flows by their place and supplies
-                    it with the necessary regelialia.
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum nostrum voluptate corporis labore odio tempora doloremque optio soluta veritatis veniam!
                   </p>
                   <p>
                     <a href="#" class="btn-custom"
@@ -279,11 +277,10 @@
                     </div>
                   </div>
                   <h3 class="heading mb-3">
-                    <a href="#">All you want to know about industrial laws</a>
+                    <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing.</a>
                   </h3>
                   <p>
-                    A small river named Duden flows by their place and supplies
-                    it with the necessary regelialia.
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum nostrum voluptate corporis labore odio tempora doloremque optio soluta veritatis veniam!
                   </p>
                   <p>
                     <a href="#" class="btn-custom"
@@ -308,11 +305,10 @@
                     </div>
                   </div>
                   <h3 class="heading mb-3">
-                    <a href="#">All you want to know about industrial laws</a>
+                    <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing.</a>
                   </h3>
                   <p>
-                    A small river named Duden flows by their place and supplies
-                    it with the necessary regelialia.
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum nostrum voluptate corporis labore odio tempora doloremque optio soluta veritatis veniam!
                   </p>
                   <p>
                     <a href="#" class="btn-custom"
@@ -337,11 +333,10 @@
                     </div>
                   </div>
                   <h3 class="heading mb-3">
-                    <a href="#">All you want to know about industrial laws</a>
+                    <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing.</a>
                   </h3>
                   <p>
-                    A small river named Duden flows by their place and supplies
-                    it with the necessary regelialia.
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum nostrum voluptate corporis labore odio tempora doloremque optio soluta veritatis veniam!
                   </p>
                   <p>
                     <a href="#" class="btn-custom"
@@ -366,11 +361,10 @@
                     </div>
                   </div>
                   <h3 class="heading mb-3">
-                    <a href="#">All you want to know about industrial laws</a>
+                    <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing.</a>
                   </h3>
                   <p>
-                    A small river named Duden flows by their place and supplies
-                    it with the necessary regelialia.
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum nostrum voluptate corporis labore odio tempora doloremque optio soluta veritatis veniam!
                   </p>
                   <p>
                     <a href="#" class="btn-custom"
@@ -430,33 +424,33 @@
             <div class="form-row">
               <div class="form-group col-md-12">
                 <label for="inputEmail4">Email</label>
-                <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                <input required type="email" class="form-control" id="inputEmail4" placeholder="Email">
               </div>
             </div>
             <div class="form-row">
               <div class="form-group col-md-12">
                 <label for="inputEmail4">Your Message</label>
                 <div class="input-group">
-                  <textarea class="form-control" aria-label="With textarea"></textarea>
+                  <textarea required class="form-control" aria-label="With textarea" placeholder="My message"></textarea>
                 </div>
               </div>
             </div>
             <div class="form-row">
               <div class="form-group col-md-12">
                 <label for="inputAddress">Address</label>
-                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                <input required type="text" class="form-control" id="inputAddress" placeholder="Abovyan Ave. 10/20">
               </div>
             </div>
             <div class="form-row">
               <div class="form-group col-md-12">
                 <label for="inputAddress2">Address 2</label>
-                <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+                <input required type="text" class="form-control" id="inputAddress2" placeholder="Apartment 20">
               </div>
             </div>
             <div class="form-row">
               <div class="form-group col-md-12">
                 <label for="inputCity">City</label>
-                <input type="text" class="form-control" id="inputCity">
+                <input required type="text" class="form-control" id="inputCity" placeholder="Yerevan">
               </div>
             </div>
             <div class="form-row">
@@ -476,7 +470,7 @@
               </div>
               <div class="form-group col-md-4">
                 <label for="inputZip">Zip</label>
-                <input type="text" class="form-control" id="inputZip">
+                <input required type="text" class="form-control" id="inputZip">
               </div>
             </div>
             <div class="mt-3 text-center">
