--- a/index.html
+++ b/index.html
@@ -111,7 +111,81 @@
           </div>
         </div>
       </section>
-      <section id="articles"></section>
+      <section id="articles" class="bg-light">
+        <div class="container">
+          <div class="text-center">
+            <h2 class="blog-heading">Articles</h2>
+          </div>
+          <div class="row d-md-flex mb-5">
+            <div class="col-lg-6">
+              <div>
+                  <a href="javascript:void(0)"><img src="./imgs/articles_1.jpg" alt=""></a>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="articles-details">
+                <div class="articles-post d-flex">
+                  <p><i class="fa fa-tag"></i><a href="#">Travel</a></p>
+                  <div class="border-line"></div>
+                </div>
+                <div class="articles-title">
+                    <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae.</h3>
+                </div>
+                <div class="articles-content">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia dicta eligendi ex reprehenderit aliquam sint tempora asperiores hic quod deleniti, sunt suscipit non distinctio?</p>
+                </div>
+                <div class="articles-author d-lg-flex justify-content-between ">
+                  <div class="author-details  d-flex align-items-center">
+                    <div class="author-img">
+                      <img src="./imgs/author1.png" alt="Autho">
+                    </div>
+                    <div class="author-description">
+                        <p><a href="#">Author</a><span>Agust 21,2018</span></p>
+                    </div>
+                  </div>
+                  <div class="btn-more">
+                    <a href="#">Read More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row d-md-flex mb-5">
+            <div class="col-lg-6">
+              <div class="articles-details">
+                <div class="articles-post d-flex">
+                  <p><i class="fa fa-tag"></i><a href="#">Travel</a></p>
+                  <div class="border-line"></div>
+                </div>
+                <div class="articles-title">
+                    <h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae.</h3>
+                </div>
+                <div class="articles-content">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia dicta eligendi ex reprehenderit aliquam sint tempora asperiores hic quod deleniti, sunt suscipit non distinctio?</p>
+                </div>
+                <div class="articles-author d-lg-flex justify-content-between ">
+                  <div class="author-details  d-flex align-items-center">
+                    <div class="author-img">
+                      <img src="./imgs/author1.png" alt="Autho">
+                    </div>
+                    <div class="author-description">
+                        <p><a href="#">Author</a><span>Agust 21,2018</span></p>
+                    </div>
+                  </div>
+                  <div class="btn-more">
+                    <a href="#">Read More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div>
+                  <a href="javascript:void(0)"><img src="./imgs/articles_1.jpg" alt=""></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <section id="coupons" >
         <div class="container container-coupons">
           <div class="text-center">
